--- a/FirstAjax/FirstAjax/FirstAjax.vbproj
+++ b/FirstAjax/FirstAjax/FirstAjax.vbproj
@@ -92,6 +92,7 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="1628132772718.jpg" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
